fix overlap text

--- a/desktop.css
+++ b/desktop.css
@@ -73,7 +73,6 @@ a{
     color: white;
     text-align: left;
     font-size: x-large;
-    line-height: 0.2;
     padding-top: 65px;
     position: absolute;
     
